FeatureAdmin 2010 ChangeLog
  - this file is intended for developers

** Feb 24th 2013 - RELEASE v 2.3: "FeatureAdmin for SharePoint 2013 - v2.3" **

** Feb 24th 2013 - Achim
added CompatibilityLevel property to Feature class, that renders the compatibility level as prefix of the guid (e.g. [15/...)

Issue 8513 - fixed SP2013 feature definition uninstall, that compatibility level is recognized
Updated error text for access denied on level SPWeb to recommend also full control via web application user policy
changed window title of feature admin to be the same for 2007, 2010 and 2013 version
changed assembly name to contain the year name

** Feb, 2013 - Perry
Trapped & logged Access Denied exceptions in Find Faulty Feature (so it doesn't crash)
Fix Find Activated Feature to correctly find web application scoped features
Factored code to find activated features into new ActivationFinder class
Record & log exception messages when FeatureManager enumerates exceptions