@@ -16,3 +16,7 @@ Trapped & logged Access Denied exceptions in Find Faulty Feature (so it doesn't 
 Fix Find Activated Feature to correctly find web application scoped features
 Factored code to find activated features into new ActivationFinder class
 Record & log exception messages when FeatureManager enumerates exceptions
+
+** Aug, 2015 - Perry
+Display more info in the faulty feature removal prompt. Add activation time, 
+and solution info (if available). Remove unpopulated compatibility level.
